--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -105,7 +105,6 @@ table {
 #idgw {
     display: flex;
     flex-direction: row;
-    margin-left: -4px;
 }
 
 .remark {
@@ -117,11 +116,13 @@ table {
 }
 
 .border-left {
-    border-left: 2px solid #4d4d4d;
+    width: 50%;
+    border-left: 4px solid #4d4d4d;
 }
 
 .border-right {
-    border-right: 2px solid #4d4d4d;
+    width: 50%;
+    border-right: 4px solid #4d4d4d;
 }
 
 #experience img {
