--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -170,7 +170,6 @@ aside {
 #profile img {
     display: block;
     width: 150px;
-    /* height: 165px; */
     margin: 0 auto;
     border-radius: 50%;
 }
@@ -249,5 +248,6 @@ i:hover {
 @media screen and (max-width: 980px) {
     #content, aside {
         width: 100%;
+        padding: 0;
     }
 }
